--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Сайт фильма "Звёздные войны"</title>
     <link rel="stylesheet" href="style.css" class="re" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
       <header class="header">
-        <img src="/img/logo.png" alt="звездные войны" class="logo" />
+        <img
+          src="/img/logo.png"
+          alt="звездные войны"
+          class="logo header__logo"
+        />
         <nav class="nav">
           <a href="#" class="nav__link">Билеты</a>
           <a href="#" class="nav__link">О фильме</a>
